fix: Overflow Issue by Adjusting Social Icon Spacing

--- a/src/assets/scss/components/social-icons.scss
+++ b/src/assets/scss/components/social-icons.scss
@@ -17,5 +17,9 @@
 				display: flex;
 			}
 		}
+
+		@media screen and (min-width: 1022px) and (max-width: 1200px) {
+			gap: 1.5rem;
+		}
 	}
 }
